# xspeedhack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  pyproject.toml
.github/workflows/: build_and_publish.yaml
cpp/: dll_main.cpp  injector.cpp  injector.h
xspeedhack/: __init__.py  client.py  xspeedhack.py
