[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xspeedhack"
dynamic = ["version"]
description = "Universal speedhack library for Python"
readme = "README.md"
authors = [{name = "Loïc Magne", email = "loic.magne@outlook.com"}]
keywords = ["speedhack", "games", "speed", "cheat"]
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "psutil>=6.0.0",
    "pywin32>=306; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
packages = ["xspeedhack"]

[tool.setuptools.package-data]
"*" = ["*.exe", "*.dll"]